clusters/managed/monitoring/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app ntfy
  labels:
    app: *app
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      containers:
        - name: ntfy 
          image: binwiederhier/ntfy:v1.28.0 
          args: ["serve"]
          env:  #example of adjustments made in environmental variables
            - name: TZ # set timezone
              value: America/Denver
            - name: NTFY_DEBUG # enable/disable debug
              value: "false"
            - name: NTFY_LOG_LEVEL # adjust log level
              value: INFO
            - name: NTFY_BASE_URL # add base url
              value: https://notifications.trusted.nirmalhk7.com
            - name: NTFY_AUTH_USERS
              valueFrom:
                secretKeyRef:
                  name: ntfy-secret
                  key: AUTH_USERS
          ports: 
            - containerPort: 80
              name: *app
          resources:
            limits:
              memory: 300Mi
              cpu:  200m
            requests:
                  cpu: 150m
                  memory: 150Mi
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              name: config-volume # generated via configMapGenerator from kustomization file
            - mountPath: /var/cache/ntfy
              name: cache-volume # cache volume mounted to persistent volume
      volumes:
        - name: config-volume
          configMap: # uses configmap generator to parse server.yml to configmap
            name: server-config
        - name: cache-volume
          persistentVolumeClaim: # stores /cache/ntfy in defined pv
            claimName: ntfy-pvc
